force-app/main/default/objects/Program_Generator_Settings__c/Program_Generator_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default settings for Program Generator batch processing</description>
    <label>Program Generator Settings</label>
</CustomObject>