force-app/main/default/objects/Program_Generator_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>The default batch size</description>
    <inlineHelpText>The default batch size</inlineHelpText>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>