force-app/main/default/objects/Program_Generator_Settings__c/fields/New_Course_Option_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Course_Option_Status__c</fullName>
    <description>The Status value to assign to newly created course options</description>
    <inlineHelpText>The Status value to assign to newly created course options</inlineHelpText>
    <label>New Course Option Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>