force-app/main/default/objects/Program_Generator_Settings__c/fields/New_Course_Session_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Course_Session_Status__c</fullName>
    <description>The Status value to assign to newly created course sessions</description>
    <inlineHelpText>The Status value to assign to newly created course sessions</inlineHelpText>
    <label>New Course Session Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>